[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/UI/options_popup/options_popup_content.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://ci8nn6qjjfjll" path="res://assets/themes/base_button.tres" id="2_theme"]

[node name="OptionsPopupContent" type="VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="SaveButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_theme")
text = "Save Game"

[node name="SavedLabel" type="Label" parent="SaveButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -8.0
offset_right = 44.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_theme")
text = "Saved!"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ResetButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_theme")
text = "Reset Progress"
